// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots parts/commons/FirstLetterIcon Default 1`] = `
<div
  className="MuiBox-root css-1le13td"
>
  <div
    className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-qo02ar-MuiAvatar-root"
    size={40}
  >
    P
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1x83kw5-MuiAvatar-root"
    size={60}
  >
    P
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1y3msk7-MuiAvatar-root"
    size={80}
  >
    P
  </div>
</div>
`;

exports[`Storyshots parts/commons/FirstLetterIcon Link First Letter Icon 1`] = `
<div
  className="MuiBox-root css-1le13td"
>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-e3mlp-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    rel="noopener noreferrer"
    target="_self"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-qo02ar-MuiAvatar-root"
      size={40}
    >
      P
    </div>
  </a>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-e3mlp-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    rel="noopener noreferrer"
    target="_self"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1x83kw5-MuiAvatar-root"
      size={60}
    >
      P
    </div>
  </a>
  <a
    className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-e3mlp-MuiTypography-root-MuiLink-root"
    href="/"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    rel="noopener noreferrer"
    target="_self"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1y3msk7-MuiAvatar-root"
      size={80}
    >
      P
    </div>
  </a>
</div>
`;
